# rex-regextract

./: Cargo.toml  README.md
doc/: rex.1
src/: main.rs
src/extracter/: mod.rs  test.rs
src/format/: mod.rs  test.rs
src/io/: input.rs  output.rs
src/io/output/: csv.rs  mod.rs
