[package]
name = "rex-regextract"
version = "0.1.0"
authors = ["eulegang <eulegang@eulegang.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
regex = "1"
csv = "1.1"

structopt = "0.3"
thiserror = "1.0"
eyre = "0.6"

[[bin]]
name = "rex"
path = "src/main.rs"
