[package]
name = "rex-regextract"
version = "0.1.0"
authors = ["eulegang <eulegang@eulegang.dev>"]
edition = "2018"

description = "extracts key value pairs out of text"
repository = "https://github.com/eulegang/rex-regextract"
license = "MIT OR Apache-2.0"
keywords = [ "regex", "extract", "kv" ]
categories = [ "command-line-utilties", "text-processing" ]

[dependencies]
regex = "1"
structopt = "0.3"
thiserror = "1.0"
eyre = "0.6"

[[bin]]
name = "rex"
path = "src/main.rs"
